frontend/essGames/src/App.css
:root {
  --color-dark: #202020;
  --color-dark-hex: #202020; /* if you want a separate variable for hex */
}




.container{
  display: flex;
  flex-direction: row;
  background: var(--color-dark);
  width: 100vw;
  height: 100vh;;
}

.sidebar{
  border: 2px solid green;
  padding: 0.25rem;
  flex: 1;
}

.grid_view{
  border: 2px solid blue;
  flex: 7;
}


*:focus {
  outline: none !important;
}


.searchBar *{
  
}

.sidebar * {
}

.list_item{
  display: flex;
  padding: 0.1rem;
  align-items: center;
  text-wrap: nowrap;
  
}
.list_item:hover{
  background: #2D2D2D !important;
  cursor: pointer;
}
.list_item>.list_item_title{
  margin-left: 1.5rem;
}
.list_item>.list_item_icon{
  margin-top: 10px;
}



.grid_view {
  display: flex;
  flex-wrap: wrap;
  padding: 1rem;
}

.game_card {
  position: relative;
  margin: 1rem;
  width: 100px; /* or whatever size you want */
  height: 100px;
}


.game_card_poster{
  width: 105px;
  height: 150px;
}

.game_card_poster:hover{
  filter: brightness(30%) !important; /* Lower % = darker */
  cursor: pointer !important;

}
.game_card_title{
  visibility: hidden;
}
.game_card > .game_card_title {
  /* Initially hidden */
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: rgb(255, 255, 255);
  text-align: center;
  max-width: 90%;
  font-weight: bold;
  transition: opacity 0.5s ease, visibility 0.5s ease;
  z-index: 10000;
}

/* When selected, show with fade-in */
.game_card.selected > .game_card_title {
  visibility: visible;
  opacity: 1;
}

